tests/should-fail/higher-order-tv-in-adt.ls
data Foo = Foo (a Int);

